--- a/src/styles/pages/ToDoList.module.scss
+++ b/src/styles/pages/ToDoList.module.scss
@@ -4,6 +4,7 @@
    gap: 10px;
    height: 100vh;
    margin: 10px;
+   overflow-y: hidden;
 }
 
 .middleContainer {
@@ -11,6 +12,7 @@
    display: flex;
    flex-direction: column;
    gap: 10px;
+   overflow-y: auto;
 }
 
 .rightContainer {
